--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch",
-    "start": "webpack-dev-server --hot"
+    "start": "webpack-dev-server --hot",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "build": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -18,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/SSJ6Porfy/Sheprd-Challenge/issues"
   },
-  "homepage": "https://github.com/SSJ6Porfy/Sheprd-Challenge#readme",
+  "homepage": "https://ssj6porfy.github.io/Sheprd-Challenge/",
   "dependencies": {
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
@@ -28,6 +31,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "csv-parse": "^2.0.4",
+    "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
